fix albums/singles description and title text-align in terms and services

--- a/src/pages/css/TermsAndServices.module.css
+++ b/src/pages/css/TermsAndServices.module.css
@@ -12,6 +12,7 @@
 .terms > h1 {
     color: var(--cor1);
     font-size: 2.2rem;
+    text-align: center;
 }
 
 .terms > section {
